# WatchSeedr

./: .travis.yml  CMakeLists.txt  README.md  cApp.cpp  cApp.h  cMain.cpp  cMain.h
SeedrClient/: CMakeLists.txt  README.md  SeedrClient.cpp  SeedrClient.h  SeedrClientTest.cpp
src/: .clang-format  index.html  main.cpp  run_webassembly.py
